# bigbangersbot

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json  docker-compose.yml
.github/workflows/: docker-publish.yml  rust.yml
src/: main.rs
