[package]
name = "big-bangers-bot"
version = "1.2.0"
authors = ["AnnsAnn <git@annsann.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.196"
serde_json = "1.0.113"
chrono = { version = "0.4.34", features = ["unstable-locales"] }
serenity = { version = "0.11.7", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
