[package]
name = "big-bangers-bot"
version = "3.0.0"
authors = ["AnnsAnn <git@annsann.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.217"
serde_json = "1.0.134"
chrono = { version = "0.4.39", features = ["unstable-locales"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "signal"] }
rand = "0.8.5"
